# master-thesis

./: .gitignore  CMakeLists.txt  README.md
cv_reconstruct/: CMakeLists.txt
cv_reconstruct/include/camera/: CameraCalib.hpp  CameraCalibParser.hpp  CameraCompute.hpp  CameraSettings.hpp  StereoCameraSettings.hpp
cv_reconstruct/include/config/: Config.hpp  ConfigParser.hpp
cv_reconstruct/include/pipeline/: FrameFeatureExtractor.hpp  OpticalFlowEstimator.hpp  PipelineResult.hpp  ReconstructionPipeline.hpp  StereoFrame.hpp
cv_reconstruct/include/point_cloud/: FeatureDetectionResult.hpp  FeatureExtractionConfig.hpp  FeatureExtractionResult.hpp  FeatureExtractor.hpp  PointCloudPostProcessor.hpp  PointCloudRegistration.hpp  point_cloud_constants.hpp
cv_reconstruct/include/reconstruct/: Localizer.hpp  PointCloudPostProcessor.hpp  Reconstruct3D.hpp  Reconstruct3DTypes.hpp  ReconstructStatusCode.hpp  ReconstructionServer.hpp  StereoFrame.hpp
cv_reconstruct/include/server/: MessageConverter.hpp  ReconstructionServer.hpp  ServerUserInterface.hpp  server_constants.hpp
cv_reconstruct/include/slam/: Frame.hpp  Map.hpp  SLAMGraph.hpp
cv_reconstruct/include/system/: KeyFrameDatabase.hpp  MapBlock.hpp  MapDataBase.hpp  MappingSystem.hpp  OptimisationGraph.hpp  ReconstructionSystem.hpp  Tracker.hpp  TrackingFrame.hpp
cv_reconstruct/include/visualisation/: PointCloudListener.hpp  Visualiser.hpp
cv_reconstruct/resources/calib/: test_calib.json
cv_reconstruct/resources/calib/kitti/: calib_kitti_rectified.json  calib_kitti_unrectified.json
cv_reconstruct/resources/calib/middlebury_dataset/: calib.json
cv_reconstruct/resources/config/: config_default.json
cv_reconstruct/src/: main.cpp
cv_reconstruct/src/camera/: CameraCalibParser.cpp  CameraCompute.cpp
cv_reconstruct/src/config/: ConfigParser.cpp
cv_reconstruct/src/pipeline/: FrameFeatureExtractor.cpp  OpticalFlowEstimator.cpp  ReconstructionPipeline.cpp
cv_reconstruct/src/point_cloud/: FeatureExtractionConfig.cpp  FeatureExtractor.cpp  PointCloudPostProcessor.cpp  PointCloudRegistration.cpp
cv_reconstruct/src/reconstruct/: Localizer.cpp  PointCloudPostProcessor.cpp  Reconstruct3D.cpp  Reconstruct3D.hpp  ReconstructionServer.cpp
cv_reconstruct/src/server/: MessageConverter.cpp  ReconstructionServer.cpp  ServerUserInterface.cpp
cv_reconstruct/src/slam/: Map.cpp  SLAMGraph.cpp
cv_reconstruct/src/system/: KeyFrameDatabase.cpp  MapBlock.cpp  MapDataBase.cpp  MappingSystem.cpp  OptimisationGraph.cpp  ReconstructionSystem.cpp  Tracker.cpp  TrackingFrame.cpp
cv_reconstruct/src/test/: alignment_test.cpp  bundle_adjustment_test.cpp  camera_compute_test.cpp  feature_extraction_test.cpp  feature_match_test.cpp  image_feature_test.cpp  localization_test_kitti.cpp  pipeline_test.cpp  reconstruct_test.cpp  reconstruct_test_kitti_rectified.cpp  sfm_test.cpp  tests_common.cpp  tests_common.hpp
cv_reconstruct/src/visualisation/: PointCloudListener.cpp  Visualiser.cpp
cv_reconstruct/test/: test_camera_calib_parser.cpp
kitti_vision_streamer/: CMakeLists.txt
kitti_vision_streamer/src/: KITTIVisionParser.cpp  KITTIVisionParser.hpp  dataset.hpp  main.cpp
network_protocol/: CMakeLists.txt
network_protocol/include/actor/: RobotStreamer.hpp
network_protocol/include/client/: StereoStreamerClient.hpp
network_protocol/include/cv_networking/client/: StereoStreamerClient.hpp
network_protocol/include/cv_networking/core/: StereoStream.hpp
network_protocol/include/cv_networking/message/: StereoStreamMessages.hpp
network_protocol/include/cv_networking/protocol/: protocol.hpp
network_protocol/include/cv_networking/server/: ReconstructionServer.hpp
network_protocol/include/message/: StereoStreamMessages.hpp
network_protocol/include/server/: ReconstructionServer.hpp
network_protocol/src/actor/: RobotStreamer.cpp
network_protocol/src/core/: ReconstructionServer.cpp  ReconstructionServer.hpp  StereoStream.cpp  StereoStream.hpp  StereoStreamerClient.cpp  StereoStreamerClient.hpp
network_protocol/src/protocol/: ProtocolStream.cpp  ProtocolStream.hpp  protocol.hpp
network_protocol/src/test/: test_reconstruction_server.cpp  test_server.cpp  test_stereo_client.cpp
stereopi_video_streamer/: CMakeLists.txt
stereopi_video_streamer/src/: main.cpp
